Fixes the overflow of AM conditions, turns them into paragraphs.
AM condition text was overflowing to the right side of the page, this just fixes it so it all is shown nicely in normal paragraph form.

--- a/r2/r2/public/static/css/wiki.less
+++ b/r2/r2/public/static/css/wiki.less
@@ -174,4 +174,5 @@
 // Specific wiki page styles
 .wiki-page-config-automoderator #editform textarea {
   font-family: "Bitstream Vera Sans Mono", Consolas, monospace;
+  word-wrap: break-word;
 }
